--- a/src/main/resources/db/database.properties
+++ b/src/main/resources/db/database.properties
@@ -1,5 +1,5 @@
-#HSQL Database Engine 2.5.1
-#Wed Jun 16 17:18:39 SAMT 2021
-tx_timestamp=1189
-modified=no
-version=2.5.1
+#HSQL Database Engine 2.5.0
+#Mon Jun 21 09:50:17 SAMT 2021
+version=2.5.0
+modified=yes
+tx_timestamp=1423
